# industrial-rag-engine

./: .env.template  .flake8  Dockerfile  README.md  docker-compose.yml  pr_description.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/api/: __init__.py  endpoints.py
src/application/: __init__.py  chat_service.py  industrial_analyzer.py  rag_service.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/infrastructure/: document_loader.py  llm_client.py  vector_store.py
src/interface/: __init__.py
src/interface/api/: __init__.py  app.py  dependencies.py  middleware.py  routes.py  uptime.py
src/interface/ui/: __init__.py  streamlit_app.py
src/models/: __init__.py  llm_utils.py  rag.py
src/utils/: __init__.py  helpers.py  logging_config.py
tests/: conftest.py  test_llm_utils.py
tests/fixtures/: sample_industrial_doc.txt
tests/integration/: __init__.py  test_api_endpoints.py  test_rag_pipeline.py
tests/unit/: __init__.py  test_chat_service.py  test_domain_models.py  test_helpers.py  test_industrial_analyzer.py  test_llm_client.py
